# japanese-numbers-converter

./: LICENSE  README.md  jnc.py  main.py  pyproject.toml  test_jnc.py  test_main.py
.github/workflows/: py_package.yml
jnc/: __init__.py
