[tool.poetry]
name = "japanese-number-converter"
version = "1.0.1"
description = "convert japanese numbers to arabic numbers"
authors = ["Haruki Kitagawa <kitagawahr@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["japanese", "number", "parser"]
homepage = "https://github.com/kitagawa-hr/japanese-numbers-converter"
repository = "https://github.com/kitagawa-hr/japanese-numbers-converter"
packages = [
    { include = "jnc" },
    { include = "jnc/py.typed" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
